# autocrap

./: Cargo.toml  Cross.toml  README.md  nocturn-midi.json
.github/workflows/: build.yml  release.yml
config/: nocturn-midi.json  nocturn-osc-raw.json  nocturn-osc.json
src/: autocrap.rs  main.rs  nocturn-config.json  nocturn-midi.json
src/autocrap/: config.rs  interpreter.rs
