[package]
name = "autocrap"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
colog = "1.3.0"
log = "0.4.22"
midir = "0.9.1"
rosc = "~0.10"
rusb = { version = "0.9", features = ["vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
usb-ids = "1.2024.3"
